# LLM

./: .gitignore
agents/: context-management-theory.md
langchain/langchain-js/: README.md  bun.lockb  index.js  jsconfig.json  llm.js  package.json
langchain/langchain-js/lesson1/: output-parser.js  prompt-tpl.js  retrieval-chain.js
langchain/langchain-js/lesson2/: overview.js  overview_output.js
langchain/langchain_go/: go.mod  go.sum  main.go  run.dev.sh
skills/creater/: AGENTS.md  canvas_best_practices_report.md  canvas_undo_redo_report.md  coursecoder.md  python_retry_report.md  session-ses_41ef.md  typescript_type_safety_article_20260120.md  usb_hid_article_20260122.md
skills/creater/.opencode/skills/code_example_searcher/: EXAMPLES.md  README.md  SKILL.md
skills/creater/.opencode_skills_backup/: DIAGRAM_FEATURE.md  FEATURE_SUMMARY_v2.1.md  PROJECT_SUMMARY.md  QUICK_START.md  TEST_REPORT_v2.0.md  UPGRADE_v2.0.md  kubernetes_microservices_architecture_article_20260120.md
spec/: README.md  index.ts  package.json
spec/.spec/memory/: constitution.md
spec/.spec/specs/react_cli/: spec.md
spec/core/: context.ts  llm.ts  prompts.ts
uv_demo/ai/: comment_dataset.py  herbal.py  hf_hub_classifier.py  hf_hub_dataset_download.py  hf_hub_datasets.py  hf_hub_generator.py  main.py  net.py  pyproject.toml  trainer.py  vocab.py
uv_demo/ai/train/sentiment/: comment_dataset.py  net.py  trainer.py  trainer_test.py
uv_demo/ai/train/sentiment/train_res/: 0_bert.pt
uv_demo/ai/train_res/: 0_bert.pt
uv_demo/ai/transformers/: pipeline.py  pipeline_support.py
(+16 files in other folders)
